# rag-injection-scanner

./: .env.example  .gitignore  LICENSE  README.md  main.py  pyproject.toml
src/rag_scanner/: chunker.py  classifier.py  cli.py  layer1_regex.py  layer2_heuristic.py  layer3_llm.py  reporter.py
tests/: test_chunker.py  test_classifier.py  test_layer1.py  test_layer2.py
tests/samples/: clean_doc.txt  injected_doc.txt  long_clean_doc.txt  long_injected_doc.txt
