[project]
name = "rag-injection-scanner"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "groq>=1.1.1",
    "pdfplumber>=0.11.9",
    "pytest>=9.0.2",
    "python-dotenv>=1.2.2",
    "rich>=14.3.3",
    "spacy>=3.8.11",
]
